Fix cross-browser layout issues. Look into animation inconsistency in Safari.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,10 +33,10 @@
   }
 
   .container {
+    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     height: 100%;
     top: 0;
     left: 0;
@@ -120,7 +120,7 @@
 }
 
 .nav-icon-lines {
-  display: block;
+  /*display: block;*/
   overflow: visible;
   height: 100%;
   max-width: 4%;
